# selenium_python_template

./: .env.template  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  test_example_craigslist.py
.github/workflows/: job_lint.yml  job_tests.yml  selenium.yml  workflow_pr.yml  workflow_weekly.yml
models/apis/: base_api.py
models/apis/examples/: postman_api.py
models/pages/: base_page.py
models/pages/examples/craigslist/: ny_home_page.py  ny_search_results_page.py
models/pages/examples/wikipedia/: home_page.py  search_results_page.py
page_models/examples/craigslist/: ny_home_page.py  ny_search_results_page.py
page_models/examples/wikipedia/: home_page.py  search_results_page.py
pages/: base_page.py
pages/examples/wikipedia/: search_results_page.py
scripts/: run_lint.py  run_tests.py
tests/: conftest.py  pytest.ini  test_example_api.py  test_example_craigslist.py  test_example_logging.py  test_example_wikipedia.py
tests/examples/: test_example_api.py  test_example_craigslist.py  test_example_fail.py  test_example_logging.py  test_example_timing.py  test_example_wikipedia.py
tests/fixtures/: fixtures_browser.py  fixtures_logging.py
utils/: dom.py  logging.py  timing.py
