[project]
name = "selenium-python-template"
version = "0.1.0"
description = "A Python Selenium template project with pytest support."
authors = [
    { name="Donald Navarro", email="donaldjnavarro@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "selenium",
    "pytest",
    "python-dotenv",
    "cffi (==1.17.0)",
    "requests",
    "webdriver-manager",
    "ruff"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.poetry]
packages = [
  { include = "src" }
]
[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"

